2006-10-26  Eric Blake  <ebb9@byu.net>

	* THANKS: Update.
	* doc/autoconf.texi (Evaluation Macros): Improve the example to
	show effect on macros that expand with commas.
	Reported by Joel E. Denny.

	* tests/m4sugar.at (m4_warn, m4_require: circular dependencies):
	Also work with M4 1.4.8.

2006-10-25  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi (Slashes): Document Tru64 4.0 bug reported by
	Jim Meyering.

2006-10-25  Stepan Kasal  <kasal@ucw.cz>

	* tests/tools.at (autom4te --force): New test, verifies that
	`--force' always rewrites the output file.

2006-10-24  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi (Limitations of Usual Tools): Document that rm
	needs operands on NetBSD 2.0.2.  Problem reported by Bruno Haible.

2006-10-24  Stepan Kasal  <kasal@ucw.cz>

	* tools/trace.at (autoconf --trace: user macros): Test `$%'.

2006-10-24  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/autoconf/specific.m4 (_AC_SYS_LARGEFILE_MACRO_VALUE):
	If FUNCTION-BODY is nonempty, use AC_LINK_IFELSE rather than
	AC_COMPILE_IFELSE, to work around problem with OSF/1 4.0F fseeko
	reported by Nelson H. F. Beebe for Coreutils 6.4.

	* tests/tools.at (autoconf --trace: user macros): Remove test
	for tracing multiline macros, since m4 1.4.7a uses a different
	way to number lines.  Problem reported by Ralf Wildenhues.

2006-10-24  Stepan Kasal  <kasal@ucw.cz>

	* bin/autom4te.in (handle_m4): Do not redirect stdin to
	/dev/null since the heuristics for interactive behaviour was
	fixed in CVS m4.

	* bin/autom4te.in: With --force, always refresh the output
	file.  Problem reported by Greg Schafer <gschafer@zip.com.au>.

	* bin/autoconf.as: Fix the verbose message at the end.

2006-10-23  Paul Eggert  <eggert@cs.ucla.edu>

	* configure.ac (AC_INIT): Bump to 2.60c.
	* NEWS: Likewise.

2006-10-22  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: Version 2.60b.

	Import this change from Texinfo:
	2006-10-15  Karl Berry  <karl@gnu.org>
	* build-aux/texinfo.tex: automake 1.10
